<resources>
    <string name="app_name">NeverLookFit</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Not Registered? Click here</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">NeverLookFit Homepage</string>
    <string name="text_record">Record Workout</string>
    <string name="text_set">Set Goals</string>
    <string name="text_progress">Progress Photos</string>
    <string name="camera_button">Camera</string>
    <string name="search_button">Search</string>
    <string name="text_to">To:</string>
    <string name="text_from">From:</string>
    <string name="text_keyword">Keyword</string>
    <string name="text_location">Location</string>
    <string name="text_date">Select date</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_select">Select the Date</string>
    <string name="text_calculator">Plate Calculator</string>
    <string name="text_total">(total bar weight)</string>
    <string name="text_45lb">45 lb</string>
    <string name="text_35lb">35 lb</string>
    <string name="text_25lb">25 lb</string>
    <string name="text_10lb">10 lb</string>
    <string name="text_5lb">5 lb</string>
    <string name="text_lb">lb</string>
    <string name="text_minus">-</string>
    <string name="text_add">+</string>
    <string name="text_weight">Weight (lbs)</string>
    <string name="text_body">Body Fat (%)</string>
    <string name="text_chest">Chest (in)</string>
    <string name="text_bicep">Biceps (in)</string>
    <string name="text_hip">Hip (in)</string>
    <string name="text_thigh">Thighs (in)</string>
    <string name="text_recordGoals">Record</string>
    <string name="text_viewGoals">View Goals</string>
    <string name="text_allGoals">All Goals</string>
    <string name="stopwatch_button">Stopwatch></string>
    <string name="record_button">Record></string>
    <string name="text_add_exercise">Add Execerise></string>
    <string name="text_MMDDYYY">MMDDYYYY></string>
    <string name="text_workout_title">Title></string>
    <string name="text_dateGoals">Date</string>
    <string name="success_goal">Goal Successfully Recorded</string>
    <string name="add_exercise_button">Add Exercise</string>
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_x">X</string>
</resources>