<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_hello"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/buttonRecordWorkout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_record" />

    <Button
        android:id="@+id/buttonSetGoals"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_set" />

    <Button
        android:id="@+id/buttonProgressPhotos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_progress" />

</LinearLayout>

