<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <TextView
        android:id="@+id/minDate"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/search_location" />

    <TextView
        android:id="@+id/maxDate"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_location" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_to"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/maxDate"
        app:layout_constraintTop_toBottomOf="@+id/search_location" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_from"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_location" />

    <EditText
        android:id="@+id/search_keyword"
        android:layout_width="260dp"
        android:layout_height="41dp"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_keyword"
        android:inputType="text"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_location"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_location"
        android:inputType="textPostalAddress"

        android:textColorHint="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_keyword" />

    <Button
        android:id="@+id/buttonWednesday"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginEnd="280dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="search"
        android:text="@string/search_button"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minDate" />

</android.support.constraint.ConstraintLayout>
